<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/archive"
        android:icon="@drawable/ic_archive_black_24dp"
        android:title="@string/main_menu_archive"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/unarchive"
        android:icon="@drawable/ic_inbox_black_24dp"
        android:title="@string/main_menu_unarchive"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/main_menu_delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/pin"
        android:icon="@drawable/ic_pin_black_24dp"
        android:title="@string/main_menu_pin"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/unpin"
        android:icon="@drawable/ic_pin_black_24dp"
        android:title="@string/main_menu_unpin"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/read"
        android:icon="@drawable/ic_drafts_black_24dp"
        android:title="@string/main_menu_read"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/unread"
        android:icon="@drawable/ic_markunread_black_24dp"
        android:title="@string/main_menu_unread"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/block"
        android:icon="@drawable/ic_block_black_24dp"
        android:title="@string/main_menu_block"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/report"
        android:icon="@drawable/ic_block_black_24dp"
        android:title="@string/main_menu_report"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>