<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/call"
        android:icon="@drawable/ic_call_white_24dp"
        android:title="@string/menu_call"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/menu_info"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/details"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/compose_menu_copy"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/compose_menu_delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_content_copy_black_24dp"
        android:title="@string/compose_menu_copy"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/forward"
        android:icon="@drawable/ic_forward_black_24dp"
        android:title="@string/compose_menu_forward"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/previous"
        android:icon="@drawable/ic_keyboard_arrow_up_black_24dp"
        android:title="@string/compose_menu_previous"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/next"
        android:icon="@drawable/ic_keyboard_arrow_down_black_24dp"
        android:title="@string/compose_menu_next"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/clear"
        android:icon="@drawable/ic_clear_black_24dp"
        android:title="@string/compose_menu_clear"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/report_category"
        android:icon="@drawable/ic_clear_black_24dp"
        android:title="@string/compose_menu_clear"
        android:visible="false"
        app:showAsAction="always" />

</menu>