<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.moez.QKSMS.common.widget.QkTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/backup_restore_dialog_title"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:textSize="primary" />

    <com.moez.QKSMS.common.widget.QkTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/backup_restore_dialog_summary"
        android:textColor="?android:attr/textColorTertiary"
        app:textSize="primary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/divider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/files"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/backup_list_item" />

    <com.moez.QKSMS.common.widget.QkTextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/backup_restore_dialog_empty"
        android:textColor="?android:attr/textColorSecondary"
        app:textSize="secondary" />

</LinearLayout>